<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/secret_santa_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/family_members_text_instructions"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/family_members_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/add_family_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="addFamily"
                android:text="@string/add_family_button"
                android:textAlignment="center" />

            <Button
                android:id="@+id/submit_family_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="createSecretSanta"
                android:text="@string/submit_button"
                android:textAlignment="center" />

            <Button
                android:id="@+id/reset_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="resetPeople"
                android:text="@string/reset_button"
                android:textAlignment="center" />


        </LinearLayout>

        <TextView
            android:id="@+id/secret_santa_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:paddingTop="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


    </LinearLayout>

</ScrollView>



